exports[`PATCH /feed/:feedSlug/items/:feedItemSlug > allows to change feed item slug 1`] = `
{
  "id": 1,
  "feedId": 1,
  "slug": "test2",
  "title": "feed item title",
  "date": "2025-01-01T10:30:00.000Z",
  "link": "http://example.com/test1",
  "description": "feed item description",
  "content": "blah",
  "image": null,
  "authors": null,
  "contributors": null,
  "createdAt": "2025-01-01T10:30:00.000Z",
  "modifiedAt": "2025-01-01T10:30:00.000Z"
}
`;

exports[`PATCH /feed/:feedSlug/items/:feedItemSlug > updates an existing feed item 1`] = `
{
  "id": 1,
  "feedId": 1,
  "slug": "test1",
  "title": "another title",
  "date": "2025-01-01T10:30:00.000Z",
  "link": "http://example.com/test1",
  "description": "feed item description",
  "content": "qwerty",
  "image": null,
  "authors": null,
  "contributors": null,
  "createdAt": "2025-01-01T10:30:00.000Z",
  "modifiedAt": "2025-01-01T10:30:00.000Z"
}
`;
